--- a/src/html/pages/solution-detail.html
+++ b/src/html/pages/solution-detail.html
@@ -76,24 +76,32 @@
           <img src="@images/click.png" alt="photo">
           <div class="media-component__list">
             <div class="news-card">
-              <h3>Функционал курсор 19.11.2021</h3>
-              <p>Описание функциональных характеристик программного обеспечения</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
+              <div>
+                <h3>Функционал курсор 19.11.2021</h3>
+                <p>Описание функциональных характеристик программного обеспечения</p>
+                <a class="link link_green-arrow" href="#">подробнее</a>
+              </div>
             </div>
             <div class="news-card">
-              <h3>Инструкция по установке курсор</h3>
-              <p>Информация, необходимая для установки программного обеспечения</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
+              <div>
+                <h3>Инструкция по установке курсор</h3>
+                <p>Информация, необходимая для установки программного обеспечения</p>
+                <a class="link link_green-arrow" href="#">подробнее</a>
+              </div>
             </div>
             <div class="news-card">
-              <h3>Инструкция пользователя курсор</h3>
-              <p>Информация, необходимая для эксплуатации программного обеспечения</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
+              <div>
+                <h3>Инструкция пользователя курсор</h3>
+                <p>Информация, необходимая для эксплуатации программного обеспечения</p>
+                <a class="link link_green-arrow" href="#">подробнее</a>
+              </div>
             </div>
             <div class="news-card">
-              <h3>Стоимость по курсор</h3>
-              <p>Информация о порядке определения стоимости программного обеспечения</p>
-              <a class="link link_green-arrow" href="#">подробнее</a>
+              <div>
+                <h3>Стоимость по курсор</h3>
+                <p>Информация о порядке определения стоимости программного обеспечения</p>
+                <a class="link link_green-arrow" href="#">подробнее</a>
+              </div>
             </div>
           </div>
         </div>
