--- a/src/html/pages/success-page.html
+++ b/src/html/pages/success-page.html
@@ -322,26 +322,32 @@
 					<img src="@images/photographer.png" alt="photo">
 					<div class="media-component__list">
 						<div class="news-card">
-							<div class="news-card__date">24 августа</div>
-							<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
-							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
-								Кушнаренково.</p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">24 августа</div>
+								<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
+								<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
+									Кушнаренково.</p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 						<div class="news-card">
-							<div class="news-card__date">25 августа</div>
-							<h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
-							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
-								Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
-								учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">25 августа</div>
+								<h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
+								<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
+									Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
+									учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 						<div class="news-card">
-							<div class="news-card__date">1 сентября</div>
-							<h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
-							<p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
-								учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">1 сентября</div>
+								<h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
+								<p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
+									учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -349,26 +355,32 @@
 					<img src="@images/building.png" alt="photo">
 					<div class="media-component__list">
 						<div class="news-card">
-							<div class="news-card__date">24 августа</div>
-							<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
-							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
-								Кушнаренково. 10-х классов МБОУ СОШ 1 села
-								Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
-								учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">24 августа</div>
+								<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
+								<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
+									Кушнаренково. 10-х классов МБОУ СОШ 1 села
+									Кушнаренково. Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного
+									учреждения к новому учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 						<div class="news-card">
-							<div class="news-card__date">25 августа</div>
-							<h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
-							<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики </p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">25 августа</div>
+								<h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
+								<p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики </p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 						<div class="news-card">
-							<div class="news-card__date">1 сентября</div>
-							<h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
-							<p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
-								учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
-							<a class="link link_green-arrow" href="#">подробнее</a>
+							<div>
+								<div class="news-card__date">1 сентября</div>
+								<h3>Компания «Форт Диалог» 14-й раз стала победителем рейтинга «25 лучших региональных ИТ-компаний»</h3>
+								<p>Системный интегратор «Форт Диалог» внес свой вклад в подготовку образовательного учреждения к новому
+									учебному году, привлекая к оснащению лучшие ИТ-продукты и решения.</p>
+								<a class="link link_green-arrow" href="#">подробнее</a>
+							</div>
 						</div>
 					</div>
 				</div>
