ref massmedia card

--- a/src/html/pages/massmedia.html
+++ b/src/html/pages/massmedia.html
@@ -25,64 +25,80 @@
       <div class="container">
         <div class="massmedia-section__cards">
           <div class="massmedia-card">
-            <img src="@images/rubezh.png" alt="logo">
-            <h3>RUБЕЖ и форт диалог</h3>
-            <p>Журнал RUБЕЖ опросил крупнейших системных интеграторов о правилах игры в муниципальных проектах
-              цифровизации и выяснил, какие платформы получили наиболее широкое распространение. Отвечает Тимур
-              Сиразетдинов, эксперт по системам технической безопасности и связи компании «Форт Диалог»</p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/rubezh.png" alt="logo">
+              <h3>RUБЕЖ и форт диалог</h3>
+              <p>Журнал RUБЕЖ опросил крупнейших системных интеграторов о правилах игры в муниципальных проектах
+                цифровизации и выяснил, какие платформы получили наиболее широкое распространение. Отвечает Тимур
+                Сиразетдинов, эксперт по системам технической безопасности и связи компании «Форт Диалог»</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/rashka.png" alt="logo">
-            <h3>Мобильный кваториум</h3>
-            <p>Компания Форт Диалог поставила в Республику Чувашия мобильный кванториум в рамках регионального проекта
-              "Успех каждого ребенка" и нацпроекта "Образование"</p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/rashka.png" alt="logo">
+              <h3>Мобильный кваториум</h3>
+              <p>Компания Форт Диалог поставила в Республику Чувашия мобильный кванториум в рамках регионального проекта
+                "Успех каждого ребенка" и нацпроекта "Образование"</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/sta.png" alt="logo">
-            <h3>Внедрение системы АСУ ТП</h3>
-            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
-              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
-            </p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/sta.png" alt="logo">
+              <h3>Внедрение системы АСУ ТП</h3>
+              <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+                катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+              </p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png" alt="logo">
-            <h3>Совхоз Алексеевский</h3>
-            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
-              теплицах совхоза "Алексеевский"</p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/alexey.png" alt="logo">
+              <h3>Совхоз Алексеевский</h3>
+              <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+                теплицах совхоза "Алексеевский"</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/sta.png" alt="logo">
-            <h3>Внедрение системы АСУ ТП</h3>
-            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
-              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
-            </p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/sta.png" alt="logo">
+              <h3>Внедрение системы АСУ ТП</h3>
+              <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+                катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+              </p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png" alt="logo">
-            <h3>Совхоз Алексеевский</h3>
-            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
-              теплицах совхоза "Алексеевский"</p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/alexey.png" alt="logo">
+              <h3>Совхоз Алексеевский</h3>
+              <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+                теплицах совхоза "Алексеевский"</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/sta.png" alt="logo">
-            <h3>Внедрение системы АСУ ТП</h3>
-            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
-              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
-            </p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/sta.png" alt="logo">
+              <h3>Внедрение системы АСУ ТП</h3>
+              <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+                катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+              </p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png" alt="logo">
-            <h3>Совхоз Алексеевский</h3>
-            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
-              теплицах совхоза "Алексеевский"</p>
-            <a class="link link_green-arrow" href="#">подробнее</a>
+            <div>
+              <img src="@images/alexey.png" alt="logo">
+              <h3>Совхоз Алексеевский</h3>
+              <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+                теплицах совхоза "Алексеевский"</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
           </div>
         </div>
         @@include('components/ui/_pagination.html')
