add image to solutions

--- a/src/html/pages/solutions.html
+++ b/src/html/pages/solutions.html
@@ -52,6 +52,9 @@
     </section>
     <section class="solutions">
       <div class="container">
+        <div class="solutions__image">
+          <img src="@images/solution-img.png">
+        </div>
         <div class="solutions__cards">
           <div class="solution-card solution-card_secondary">
             <div>
