feat: history (slider) and about-company (description)

--- a/src/html/pages/about-company.html
+++ b/src/html/pages/about-company.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </section>
-    <section class="about-company">
+    <!-- <section class="about-company">
       <div class="container">
         <div class="about-company__swiper swiper-component swiper">
           <div class="swiper-wrapper">
@@ -94,7 +94,44 @@
           </div>
         </div>
       </div>
+    </section> -->
+
+    <section class="company-description">
+      <div class="container">
+        <h2>О компании</h2>
+        <div class="company-description__wrapper">
+          <div class="company-description__banner">
+            <div class="company-description__image">
+              <img src="@images/company-banner.png" alt="#">
+            </div>
+            <div class="company-description__caption">
+              Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог
+            </div>            
+          </div>
+          <div class="company-description__content">
+            <div class="company-description__text">
+              <p><span>Руководитель:</span> Полетаев Кирилл Владимирович, генеральный директор</p>
+              <p><span>Количество сотрудников:</span> более 500</p>
+              <p><span>Состав «Группы компаний Форт Диалог»:</span></p>
+              <ul>
+                <li>АО «Форт Диалог» ИНН 1650006259</li>
+                <li>ООО «Форт Диалог» ИНН 0275908848</li>
+                <li>ООО «ОПК» («Объединенная Поставочная компания») ИНН 1650166051</li>
+                <li>ООО «Смартрегион» ИНН 0275917722</li>
+                <li>ООО «Форт Диалог Сервис» ИНН 1650092709</li>
+                <li>ООО «Управляющая компания Форт Диалог» ИНН 1650164664</li>
+              </ul>
+            </div>
+            <div class="company-description__rostrud">
+              <p>
+                Компания «Форт Диалог» в 2020 году успешно прошла специальную оценку условий труда (COУT). По результатам проверки эксперты вынесли заключение, что все рабочие места признаны допустимыми и соответствуют государственным требованиям охраны труда. Декларация соответствия условий труда государственным нормативным требованиям передана в <a href="https://declaration.rostrud.gov.ru/" target="_blank">Роструд</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
     <section class="quote-section">
       <div class="container">
         <img class="quote-section__quote" src="@icons/quote.svg" alt="quote">
