--- a/src/html/pages/history.html
+++ b/src/html/pages/history.html
@@ -121,6 +121,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -137,6 +138,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="1995">
             <div>1995</div>
@@ -144,6 +146,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -160,6 +163,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2000">
             <div>2000</div>
@@ -167,6 +171,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -183,6 +188,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2002">
             <div>2002</div>
@@ -206,6 +212,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2006">
             <div>2006</div>
@@ -213,6 +220,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -229,6 +237,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2010">
             <div>2010</div>
@@ -236,6 +245,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -252,6 +262,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2014">
             <div>2000</div>
@@ -259,6 +270,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -275,6 +287,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2020">
             <div>2020</div>
@@ -282,6 +295,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -298,6 +312,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
           <div class="history__year" id="2023">
             <div>2023</div>
@@ -305,6 +320,7 @@
               ИТ-компанию под названием Форт Диалог. Штат компании на тот момент насчитывал 12 человек — многие из них
               до сих пор работают в Форт Диалог.</p>
             <img src="@images/window.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
             <h2>Первые <span>проекты</span></h2>
             <p>Первым клиентом молодой компании стал Сбербанк, заказавший комплексную автоматизацию четырех своих
               крупнейших отделений. Разработанная первая в стране система обслуживания частных вкладчиков
@@ -321,6 +337,7 @@
             <p> До этого момента жители России пользовались только наличными деньгами, и клиенты были жестко привязаны
               к банковскому отделению, где открывали счет.</p>
             <img src="@images/touch.png" alt="photo">
+            <span class="history__caption">Штат компании на тот момент насчитывал 12 человек — многие из них до сих пор работают в Форт Диалог</span>
           </div>
         </div>
       </div>
@@ -328,44 +345,93 @@
     <section class="reviews-section">
       <div class="container">
         <h2>Отзывы и поздравления<br>наших партнеров</h2>
-        <div class="employees">
-          <div class="employees__card">
-            <img src="@images/oleg.png" alt="photo">
-            <h3>Силантьев Олег</h3>
-            <span>Начальник отдела АСУ ТП
-              компании Форт Диалог</span>
-            <div class="employees__history">
-              <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
-                позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
-                роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
-                поддержки</p>
+        <div class="reviews-section__slider">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="reviews-section__item reviews-section__item_video">
+                <div class="reviews-section__iframe iframe">
+                  <div class="iframe__poster">
+                    <img src="@images/oleg.png" alt="photo">
+                  </div>
+                  <iframe src="https://www.youtube.com/embed/VAwofsCU8R8?si=QrFXjqHGO9qYnE46" frameborder="0" allow="fullscreen" loading="lazy"></iframe>
+                </div>
+                <div class="reviews-section__body">
+                  <div class="reviews-section__description">
+                    <h3>Силантьев Олег</h3>
+                    <span>Начальник отдела АСУ ТП компании IBM</span>
+                  </div> 
+                  <div class="reviews-section__logo">
+                    <img src="@icons/logo-ibm.svg" alt="IBM">
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="employees__card">
-            <img src="@images/timur.png" alt="photo">
-            <h3>Сиразетдинов тимур</h3>
-            <span>Эксперт по системам технической безопасности и связи компании «Форт Диалог»</span>
-            <div class="employees__history">
-              <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
-                позицию системного администратора (TSS 2)</p>
+
+            <div class="swiper-slide">
+              <div class="reviews-section__item reviews-section__item_photo">
+                <div class="reviews-section__image">
+                  <img src="@images/oleg.png" alt="photo">
+                </div>
+                <div class="reviews-section__body">
+                  <div class="reviews-section__description">
+                    <h3>Силантьев Олег</h3>
+                    <span>Начальник отдела АСУ ТП компании IBM</span>
+                  </div> 
+                    <div class="employees__history">
+                      <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
+                        позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
+                        роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
+                        поддержки</p>
+                    </div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="employees__card">
-            <img src="@images/oleg.png" alt="photo">
-            <h3>Силантьев Олег</h3>
-            <span>Начальник отдела АСУ ТП
-              компании Форт Диалог</span>
-            <div class="employees__history">
-              <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
-                позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
-                роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
-                поддержки Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда
-                на
-                позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
-                роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
-                поддержки</p>
+
+            <div class="swiper-slide">
+              <div class="reviews-section__item reviews-section__item_video">
+                <div class="reviews-section__iframe iframe">
+                  <div class="iframe__poster">
+                    <img src="@images/timur.png" alt="photo">
+                  </div>
+                  <iframe src="https://www.youtube.com/embed/VAwofsCU8R8?si=QrFXjqHGO9qYnE46" frameborder="0" allow="fullscreen" loading="lazy"></iframe>
+                </div>
+                <div class="reviews-section__body">
+                  <div class="reviews-section__description">
+                    <h3>Сиразетдинов тимур</h3>
+                    <span>Эксперт по системам технической безопасности 
+                      и связи компании Dr. WEB</span>
+                  </div> 
+                  <div class="reviews-section__logo">
+                    <img src="@images/drweb.png" alt="Dr. web">
+                  </div>
+                </div>
+              </div>
             </div>
+
+            <div class="swiper-slide">
+              <div class="reviews-section__item reviews-section__item_photo">
+                <div class="reviews-section__image">
+                  <img src="@images/timur.png" alt="photo">
+                </div>
+                <div class="reviews-section__body">
+                  <div class="reviews-section__description">
+                    <h3>Сиразетдинов тимур</h3>
+                    <span>Эксперт по системам технической безопасности 
+                      и связи компании Dr. WEB</span>
+                  </div> 
+                    <div class="employees__history">
+                      <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
+                        позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
+                        роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
+                        поддержки</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+
           </div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
